Version 0.8.1

    Add cpp11.h file missing from 0.8.0 distribution archive.

Version 0.8.0

    New behaviour: xml::document::save_to_{string,file}() now throws exception
    in case of failure by default instead of silently ignoring any errors.

    New behaviour: xpath_context::evaluate() also throws an exception if an
    invalid XPath expression is specified.

    In both cases, "ignore_errors" can be passed as the new "on_error" argument
    to these functions to restore the old behaviour (this is, however, not
    recommended).

    Added xml::node::move_under().
    Added xml::node::set_namespace().
    Added xml::xpath_context class for evaluating XPath expressions.
    Added xml::nodes_view::erase() analogous to node::erase().

Version 0.7.1

    Various compilation and build fixes.

Version 0.7.0

    Changed the xml::node::node(name, content) constructor so that it doesn't
    create a child text node if the content is empty.

    Added xml::node::set_text_content() for setting unescaped textual
    content.

    Added xml::exception class, derived from std::runtime_error. Xmlwrapp
    will throw only this or derived exception, with the exception of
    std::bad_alloc(), which is still thrown when appropriate.

    Added xml::error_handler and related classes for collecting multiple errors
    and warnings. Added appropriate forms of constructors and functions to other
    classes.

    Added xml::node::clear() method.

    Added xml::schema class for XML Schema validation.

    Added xml::document(filename) and xml::document(data, size) constructors
    for convenient document creation without the need to use tree_parser.

Version 0.6.3

    Fixed compilation with Sun Studio compiler; miscellaneous other build
    related fixes.

    Better error reporting when xml::tree_parser input file doesn't exist.

    Added convenience script for getting dependencies on Windows.

Version 0.6.2

    Fixed xml::tree_parser to fail on non-fatal parser errors.
